# fork-mmm

./: .codemapignore  .depend  .dockerignore  .gitignore  ALIRE  Announce418  Browser.nw  Browser_extra.nw  CLAUDE.md  Dockerfile  LICENSE  Makefile  Makefile.common  Makefile.config  Makefile.config.tpl  Makefile.dune  Makefile.safe  README  authors.txt  changes.txt  configure  copyright.txt  critique.txt  diff_mmm  dune  dune-project  htparse.ml  install-orig.txt  lang.ml  lang.mli  list_cg  list_ml  list_other  main.ml  main_gtk.ml  main_remote.ml  mkfile.common  mmm.opam  mmm.sh  modif-orig.txt  (+9 more)
applets/: Makefile  appsys.ml  appview.ml  cube3d.ml  dancing.ml  dload.mli  eyes.ml  goto.ml  icons.ml  japanese.ml  mmorph.ml  molecule.ml  mondrian.ml  morpher.ml  rotimage.ml  slide.ml  taquin.ml  tetris.ml
appsys/: Makefile  applets.ml  applets.mli  appsys.ml  capabilities.ml  capabilities.mli  dload.ml  dload.mli  pgp.ml
browser/: Makefile  about.ml  about.mli  fontprefs.ml  gcache.ml  gcache.mli  main.ml  mmmprefs.ml  nav.ml  prefs.ml
chrome/: Makefile  history.ml  nav.ml
commons/: Makefile  common.ml  common.mli  condition.ml  condition.mli  date.ml  date.mli  dune  ebuffer.ml  ebuffer.mli  error.ml  error.mli  feed.ml  feed.mli  file_event.ml  fileevent_.ml  glevents.ml  glevents.mli  hotlist.ml  i18n.ml  i18n.mli  i18nprintf.ml  i18nprintf.mli  ibtree.ml  ibtree.mli  lang.ml  lang.mli  lexpath.mli  log.ml  log.mli  low.ml  low.mli  mlist.ml  mlist.mli  mstring.ml  mstring.mli  msys.ml  msys.mli  munix.ml  timer_.ml
crcs/: crcs.ml  crcsmmm.ml
data/: MMM.ad  MMM.ad.fr  MMM.ad.ja  msgs.txt
display/: Makefile  attrs.ml  attrs.mli  cmap.ml  ctext.ml  ctext.mli  fit.ml  fit.mli  fonts.ml  fonts.mli  form.ml  form.mli  hr.ml  hr.mli  htbind.ml  htbind.mli  htframe.ml  html_disp.ml  html_disp.mli  html_form.ml  html_form.mli  html_table.ml  html_table.mli  htmlfmt.ml  htmlfmt.mli  htmlw.ml  htmlw.mli  imgload.ml  imgload.mli  source.ml  source.mli  styles.ml  styles.mli  table.ml  table.mli  textw_fo.ml  textw_fo.mli
doc/: anim.html  announce417  cli-fr.html  cli.html  faq-ja.html  htparse.m  i18n-ja.html  index-ja.html  index.html  javacomp-fr.html  javacomp.html  meuh.au  mondrian-fr.html  mondrian.html  morph-fr.html  morph.html  nav-ja.html  prefs-fr.html  prefs.html  progs-fr.html  res-fr.html  rotimage.html  tetris.html  tips-fr.html  tips-ja.html  tips.html
docs/: Browser.nw  Makefile  anim-fr.html  dancing.html  demo-fr.html  demo.html  docindex-ja.html  docindex.html  eyes.html  lineage.txt  mkfile  mmm-applets.ps  mmm-gdr-fr.ps  mmm.nw  mmm_extra.nw  mmm_remote.m  prefs-ja.html  progs.html  res-ja.html  taquin-fr.html  taquin.html  tech-fr.html
extensions/: Makefile  audio.ml  images.ml  remove_simple_table.ml  tachy_aftermmm.ml  tachy_space.ml  tachy_test.ml
globals/: Makefile  dune  version.ml  version.mli
gui/: Makefile  about.ml  about.mli  cci.ml  debug.ml  fontprefs.ml  gcache.ml  gcache.mli  history.ml  history.mli  mmm.ml  mmm.mli  mmmprefs.ml  mmmprefs.mli  nav.ml  nav.mli  plink.ml  plink.mli  prefs.ml  prefs.mli
gui/display/: Makefile  attrs.ml  cmap.ml  ctext.ml  dune  fit.ml  fit.mli  fonts.ml  fonts.mli  form.ml  form.mli  hr.ml  htbind.ml  htframe.ml  html_disp.ml  html_disp.mli  html_form.ml  html_form.mli  html_table.ml  htmlw.ml  htmlw.mli  imgload.ml  imgload.mli  source.ml  source.mli  styles.ml  table.ml  table.mli  textw_fo.ml
htdisp/: Makefile  attrs.ml  ctext.ml  fit.ml  fit.mli  fonts.ml  fonts.mli  form.ml  hr.ml  htbind.ml  htmlw.mli  imgload.ml  imgload.mli  source.ml  table.ml
html/: Makefile  dtd.ml  dtd.mli  dune  html.ml  html.mli  html_eval.ml  html_eval.mli  htparse.ml  lexhtml.mli  lexhtml.mll
http/: Makefile  auth.ml  auth.mli  base64.ml  base64.mli  dune  http.ml  http.mli  http_date.ml  http_date.mli  http_headers.ml  http_headers.mli  lexdate.mll  lexheaders.mli  lexheaders.mll  messages.mli  retype.ml  retype.mli
japan/: encode.mli  japan.ml  wstream.ml
libs/commons/: Cap.ml  Cap.mli  CapUnix.ml  Makefile  Rune.ml  common.ml  condition.mli  date.mli  dune  i18nprintf.ml  i18nprintf.mli  ibtree.ml  log.ml  low.ml  mlist.ml  mstring.mli  munix.ml
main/: dune  htparse.ml  main.ml  main_gtk.ml
misc/: condition.mli  date.mli  ebuffer.mli  error.ml  feed.ml  hotlist.ml  i18n.mli  i18nprintf.ml  ibtree.ml  lexpath.mli  lexpath.mll  low.ml  mlist.mli  munix.ml  (+1 more)
src/main/: dune  main.ml  main_remote.ml
tk/: img.ml  (+13 more)
(+400 files in other folders)
