
(library
 (public_name mmm.commons)
 (name mmm_commons)
 (wrapped false)
 (modules
  Set_ Map_
  Cap CapStdlib CapSys CapUnix
  Eq Ord
  Common
  Dumper OCaml
  Console
  Logs Logs_
  Exit Exception
  Chan FS Tmp ; IO
  Cmd Proc
  ; Date Bits Rune ; Date also in misc/, Rune
  ; Fpath included here (different from xix dune file)
  Fpath Fpath_ ; Ftype
  Arg_
  ; Arch OS Endian
 )
 ;(inline_tests)
 ;(preprocess
 ; (pps ppx_inline_test))
)
