; can't link yet with dune so let's build a library at least
; so can use dune to quickly check our OCaml code
(library
 (public_name mmm.main)
 (name mmm_main)
 (wrapped false)
 (libraries
    camltk
    ;mmm.commons
    mmm.www
    ;mmm.html
    ;; mmm.http
    ;mmm.protocols
    ;mmm.tk
    mmm.viewers
    mmm.display
    mmm.gui
    mmm.applets
 )
 (modules
   Main
 )
 (preprocess (pps ppx_deriving.show))
)

;(executable
; (name main)
; (modules main)
; (libraries
;   unix str dynlink
;   camltk camltk.frx camltk.jpf camltk.tkanim
;   mmm.commons
;   mmm.www
;   mmm.tk
;   mmm.gui
; )
; ; 'byte' is for ocamldebug
; (modes native byte))



(executable
 (name htparse)
 (modules htparse)
 (libraries
   mmm.html mmm.i18n
 )
 ; 'byte' is for ocamldebug
 (modes native byte))


(executable
 (name main_remote)
 (modules main_remote)
 (libraries
   unix
   mmm.html
 )
 ; 'byte' is for ocamldebug
 (modes native byte))



(install
 (package mmm)
 (section bin)
 (files
  (htparse.exe as htparse)
  ; useful to debug, see ../../debug and ocamldebug
  (htparse.bc as htparse.bc)
  (main_remote.exe as mmm_remote)
;  (main.exe as mmm)
 )
)

